--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 													<input name="Email" id="login_email" placeholder="Email Address" type="text" required="">
 													<input name="Password" id="login_pwd" placeholder="Password" type="password" required="">
 													<div class="sign-up">
+														<br>
+														<div class="usertype">User Type</div>
+														<select>
+  														<option value="user">User</option>
+  														<option value="manager">Manager</option>
+														</select>
+														<br>
 														<input type="submit" value="Sign in"/>
 													</div>
 												</form>
