--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/fasthover.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+
 <!-- //Custom Theme files -->
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -52,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="modal fade" id="myModal88" tabindex="-1" role="dialog" aria-labelledby="myModal88"
 		aria-hidden="true">
 		<div class="modal-dialog modal-lg">
-			<div class="modal-content">
+			<div class="modal-content" >
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 						&times;</button>
@@ -62,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="row">
 						<div class="col-md-8 modal_body_left modal_body_left1" style="border-right: 1px dotted #C2C2C2;padding-right:3em;">
 							<div class="sap_tabs">
-								<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
+								<div id="horizontalTab" style="display: block; width: 100%; margin: 2px;">
 									<ul>
 										<li class="resp-tab-item" aria-controls="tab_item-0"><span>Sign in</span></li>
 										<li class="resp-tab-item" aria-controls="tab_item-1"><span>Sign up</span></li>
@@ -137,9 +138,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<script>
-		$('#myModal88').modal('show');
+		if(!sessionStorage.getItem("Customer_Name")){
+			$('#myModal88').modal('show');
+		}
+		
 	</script>
 	<!-- header modal -->
+     <!-- 顶部导航 -->
+     
+            <!-- <div class="car_wrap clear" style="background-color:lightgray;margin:0px">
+                <div class="welcome fl" style="font-size: 17px;color:#000000;">
+                    <span class="cor3" >Welcome to G36，please
+                        <a href="login.html" title="请登录网站" style="color:#FF2832;">Login in</a>
+                        <a href="inputRegisterMess.html" title="免费注册时代账户">or Sign up</a>
+                    </span>
+				  <a href="ShoppingCart.html" ><span style="position: absolute;right: 500px;color:#000000;">Shopping cart </span></a>&emsp;&emsp;&emsp;&emsp;
+					<span style="position:absolute;right: 250px;color=#6a5acd;">Personal Center</span>&emsp;&emsp;&emsp;<span style="position: absolute;right:10px;">Login out</span>
+                </div>
+        	</div> -->
+        <!-- /顶部导航 -->
 	<!-- header -->
 	<div class="header" id="home1">
 		<div class="container">
@@ -274,7 +291,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div id="myTabContent" class="tab-content">
 						<div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab">
 							<div class="agile_ecommerce_tabs">
-								<div class="col-md-4 agile_ecommerce_tab_left">
+								<!-- <div class="col-md-4 agile_ecommerce_tab_left">
 									<div class="hs-wrapper">
 										<img src="images/3.jpg" alt=" " class="img-responsive" />
 										<img src="images/4.jpg" alt=" " class="img-responsive" />
@@ -363,7 +380,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<button type="submit" class="w3ls-cart">Add to cart</button>
 										</form>
 									</div>
-								</div>
+								</div> -->
 								<div class="clearfix"> </div>
 							</div>
 						</div>
@@ -1031,10 +1048,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="w3_footer_grids">
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Contact</h3>
-					<p>Please contact us if you have any problem.</p>
 					<ul class="address">
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>The Chinese University of Hong <span> Kong, Shatin, NT, Hong Kong</span></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">1155100000@link.cuhk.edu.hk</a></li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>The Chinese University of Hong Kong, Shatin, NT, Hong Kong</li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="ture"></i><a href="mailto:info@example.com">1155@link.cuhk.edu.hk</a></li>
 						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>852 9583 0000</li>
 					</ul>
 				</div>
@@ -1105,6 +1121,40 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 	<script src="http://cdn1.lncld.net/static/js/3.6.0/av-min.js"></script>
 	<script src="js/logic/index.js"></script>
+	<script src="js/template-web.js"></script>
 	<!-- //cart-js -->
+	<script id="product" type="text/html">
+		{{each data}}
+			<div class="col-md-4 agile_ecommerce_tab_left">
+				<div class="hs-wrapper">
+					{{each $value.get("product").get('images')}}
+						<img src="{{$value}}" alt=" " class="img-responsive" />
+					{{/each}}
+					<div class="w3_hs_bottom">
+						<ul>
+							<li>
+								<a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<h5><a href="single.html">
+					{{$value.get("product").get('title')}} {{$value.get('color')}} 
+					{{if $value.get('rom')}}
+						{{$value.get('rom')}}GB
+					{{/if}}
+				</a></h5>
+				<div class="simpleCart_shelfItem">
+					<p>
+						<span>${{$value.get("originalPrice")}}</span> 
+						<i class="item_price">${{$value.get("discountPrice")}}</i>
+					</p>
+					<form action="#" method="post">
+						<button type="submit" class="w3ls-cart">Add to cart</button>
+					</form>
+				</div>
+			</div>
+		{{/each data}}
+	</script>
 </body>
 </html>
