--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,8 +25,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link rel="stylesheet" href="css/jquery.countdown.css" /> <!-- countdown -->
 <!-- //js -->
 <!-- web fonts -->
-<link href='//fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<link href="//fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'">
 <!-- //web fonts -->
 <!-- start-smooth-scrolling -->
 <script type="text/javascript">
@@ -180,9 +174,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<form action="#" method="post" class="last">
 					<input type="hidden" name="cmd" value="_cart" />
 					<input type="hidden" name="display" value="1" />
-					<button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-				</form>
-			</div>
+					<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+			</form>
+					</div>
 		</div>
 	</div>
 	<!-- //header -->
