样式调整了一下

--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -134,8 +134,8 @@
 	<!-- logo与进度反馈区域 -->
 	<div id="logo_line" class="car_wrap clear">
 
-			<div class="shopCar_tit fl" style="color: slateblue;font-family:atial;"">
-					<h1 >Shopping Cart</h1>
+			<div class="shopCar_tit fl" style="font-family:atial;">
+					<h1 style="position:relative;left:210px;">Shopping Cart</h1>
 			</div>
 	</div>
 <!-- /logo与进度反馈区域 -->
