--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -132,10 +132,10 @@
 	</div>
 	<!-- //navigation -->
 	<!-- logo与进度反馈区域 -->
-	<div id="logo_line" class="car_wrap clear">
+	<div id="logo_line" class="car_wrap clear" style="height:35px">
 
-			<div class="shopCar_tit fl" style="font-family:atial;">
-					<h1 style="position:relative;left:240px;">Shopping Cart</h1>
+			<div class="shopCar_tit fl" style="font-family:atial;font-size: 30px;position:absolute;left:240px;">
+					Shopping Cart
 			</div>
 	</div>
 <!-- /logo与进度反馈区域 -->
@@ -155,7 +155,7 @@
 													</th>
 													<th class="cart_price">Price($)</th>
 													<th class="cart_num">Quantity</th>
-													<th class="cart_total"></th>
+													<th class="cart_total">Subtotal</th>
 													<th class="cart_option"></th>
 											</tr>
 									</thead>
@@ -269,9 +269,8 @@
 															</div>
 													</td>
 													<td>
-															<div class="cart_item_total">
-																	<p class="item_total_price"> </p>
-																	<p> <span class="item_saved_price"></span></p>
+															<div class="cart_item_total">										
+<p > <span class="jumei_price" style="position:relative;top:25px">32.00</span></p>
 															</div>
 													</td>
 													<td>
@@ -330,8 +329,7 @@
 													</td>
 													<td>
 															<div class="cart_item_total">
-																	<p class="item_total_price"> </p>
-																	<p> <span class="item_saved_price"> </span></p>
+																	<p> <span class="jumei_price" style="position:relative;top:25px">34.00 </span></p>
 															</div>
 													</td>
 													<td>
@@ -391,8 +389,7 @@
 													</td>
 													<td>
 															<div class="cart_item_total">
-															  <p class="item_total_price"> </p>
-															  <p>  <span class="item_saved_price"> </span></p>
+															  <p> <span class="jumei_price" style="position:relative;top:25px"></spa> 27.00</span></p>
 															</div>
 													</td>
 													<td>
@@ -404,7 +401,7 @@
 									</tbody>
 									<tfoot>
 											<tr>
-													<td colspan="5"> Subtotal： <span class="group_total_price">$5100</span> </td>
+													<td colspan="5"> ： <span class="group_total_price"></span> </td>
 											</tr>
 									</tfoot>
 							</table>
