--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -266,7 +266,7 @@
 				<div class="right_handler"> In total
 					<span class="total_amount"> 1 </span> &nbsp;items &nbsp;&nbsp; Total
 					<span class="total_price">&nbsp;$5200</span>
-					<a id="go_to_order" class="btn" href="lookOrder.html" style="font-size: 14px">Proceed &nbsp;&nbsp;To
+					<a id="go_to_order" class="btn" href="lookOrder.html" style="font-size: 14px；position:relative;bottom:4px;">Proceed &nbsp;&nbsp;To
 						<br>CheckOut</a>
 				</div>
 				<label for="js_all_selector" class="cart_all_selector_wrapper">
