调整数量输入框样式

--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -217,7 +217,7 @@
 							<td>
 								<span class="cart_item_quantity">
 									<span class="icon">-</span>
-									<input min="1" class="cart_item_quantity_input" type="number">
+									<input min="1" max="99" class="cart_item_quantity_input" type="number">
 									<span class="icon">+</span>
 								</span>
 							</td>
@@ -247,7 +247,7 @@
 								<td>
 									<span class="cart_item_quantity">
 										<span class="icon">-</span>
-										<input min="1" class="cart_item_quantity_input" type="number">
+										<input min="1" max="99" class="cart_item_quantity_input" type="number">
 										<span class="icon">+</span>
 									</span>
 								</td>
