修改css文件路径

--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -42,7 +42,7 @@
 			});
 		});
 	</script>
-	<link rel="stylesheet" href="/css/shopping-cart.css">
+	<link rel="stylesheet" href="css/shopping-cart.css">
 </head>
 
 <body>
