--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -266,8 +266,8 @@
 				<div class="right_handler"> In total
 					<span class="total_amount"> 1 </span> &nbsp;items &nbsp;&nbsp; Total
 					<span class="total_price">&nbsp;$5200</span>
-					<a id="go_to_order" class="btn" href="lookOrder.html" style="font-size: 14px；position:relative;bottom:4px;">Proceed &nbsp;&nbsp;To
-						<br>CheckOut</a>
+					<a id="go_to_order" class="btn" href="lookOrder.html" style="position:relative;bottom:4px;"><p style="font-size:15px;">Proceed &nbsp;&nbsp;To
+						<br>CheckOut</p></a>
 				</div>
 				<label for="js_all_selector" class="cart_all_selector_wrapper">
 					<input id="js_all_selector" class="js_all_selector all_selector" type="checkbox"> Choose All </label>
