--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -182,7 +182,8 @@
 						</tr>
 					</thead>
 					<tbody id="cart_item_body">
-						<tr>
+						<!-- 内容由模板引擎填充！！ -->
+						<!-- <tr>
 							<td>
 								<input name="cart_item_checkbox" type="checkbox">
 								<div class="cart_item_preview">
@@ -211,7 +212,7 @@
 							<td>
 									<a href="javascript:void(0)">Delete</a>
 							</td>
-						</tr>
+						</tr> -->
 					</tbody>
 				</table>
 				<!-- ====================================================================  -->
