--- a/single.html
+++ b/single.html
@@ -295,27 +295,27 @@
 						<h5 style="text-transform: capitalize">Color : </h5>
 					<div class="colr">
 						<div class="check">
-							<label class="checkbox" style="color:#C8490D;font:1px"><input type="radio" id="Colour1" name="checkbox"  value="Rose Gold" checked="checked"><i> </i>Rose Gold</label>
+							<label class="checkbox" style="color:#C8490D;font:1px"><input type="radio" id="Colour1" name="checkcolour"  value="Rose Gold" checked="checked"><i> </i>Rose Gold</label>
 						</div>
 					</div>
 					<div class="colr">
 						<div class="check">
-							<label class="checkbox" style="color: #F3D607;font:1px"><input type="radio" id="Colour2" name="checkbox"  value="Gold" checked="checked"><i> </i>Gold</label>
+							<label class="checkbox" style="color: #F3D607;font:1px"><input type="radio" id="Colour2" name="checkcolour"  value="Gold" checked="checked"><i> </i>Gold</label>
 						</div>
 					</div>
 					<div class="colr">
 						<div class="check">
-							<label class="checkbox" style="color:#A7A3A3;font:1px"><input type="radio" id="Colour3" name="checkbox"  value="Silver" checked="checked"><i> </i>Silver</label>
+							<label class="checkbox" style="color:#A7A3A3;font:1px"><input type="radio" id="Colour3" name="checkcolour"  value="Silver" checked="checked"><i> </i>Silver</label>
 						</div>													
 					</div>
 										<div class="colr">
 						<div class="check">
-							<label class="checkbox" style="color:#080808;font:1px"><input type="radio" id="Colour4" name="checkbox"  value="Balck" checked="checked"><i> </i>Black</label>
+							<label class="checkbox" style="color:#080808;font:1px"><input type="radio" id="Colour4" name="checkcolour"  value="Balck" checked="checked"><i> </i>Black</label>
 						</div>													
 					</div>
 										<div class="colr">
 						<div class="check">
-							<label class="checkbox" style="color:#3B3B3B;font:1px"><input type="radio" id="Colour5" name="checkbox"  value="Jet Black" checked="checked"><i> </i>Jet Black</label>
+							<label class="checkbox" style="color:#3B3B3B;font:1px"><input type="radio" id="Colour5" name="checkcolour"  value="Jet Black" checked="checked"><i> </i>Jet Black</label>
 						</div>													
 					</div>
 						
