--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
 						</ul>
 					</div>
 				</div>
-				<h5><a href="single.html">
+				<h5><a href="single.html?id={{$value.get('product').id}}">
 					{{$value.get("product").get('title')}} {{$value.get('color')}} 
 					{{if $value.get('rom')}}
 						<br/>{{$value.get('rom')}}GB
