--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/fasthover.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
-
 <!-- //Custom Theme files -->
 <!-- font-awesome icons -->
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -25,8 +24,8 @@
 <link rel="stylesheet" href="css/jquery.countdown.css" /> <!-- countdown -->
 <!-- //js -->
 <!-- web fonts -->
-<link href="//fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'">
+<link href='//fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 <!-- //web fonts -->
 <!-- start-smooth-scrolling -->
 <script type="text/javascript">
@@ -171,12 +170,8 @@
 				</div>
 			</div>
 			<div class="cart cart box_1">
-				<form action="#" method="post" class="last">
-					<input type="hidden" name="cmd" value="_cart" />
-					<input type="hidden" name="display" value="1" />
-					<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-			</form>
-					</div>
+				<button class="w3view-cart" onclick="window.location.href='ShoppingCart.html'"><i class="fa fa-cart-arrow-down" ></i></button>
+			</div>
 		</div>
 	</div>
 	<!-- //header -->
@@ -197,37 +192,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html" class="act">Home</a></li>
 						<!-- Mega Menu -->
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
-							<ul class="dropdown-menu multi-column columns-3">
-								<div class="row">
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Mobiles</h6>
-											<li><a href="products.html">Mobile Phones</a></li>
-											<li><a href="products.html">Mp3 Players <span>New</span></a></li>
-											<li><a href="products.html">Popular Models</a></li>
-											<li><a href="products.html">All Tablets<span>New</span></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-3">
-										<ul class="multi-column-dropdown">
-											<h6>Accessories</h6>
-											<li><a href="products1.html">Laptop</a></li>
-											<li><a href="products1.html">Desktop</a></li>
-											<li><a href="products1.html">Wearables <span>New</span></a></li>
-											<li><a href="products1.html"><i>Summer Store</i></a></li>
-										</ul>
-									</div>
-									<div class="col-sm-4">
-										<div class="w3ls_products_pos">
-											<h4>30%<i>Off/-</i></h4>
-											<img src="images/1.jpg" alt=" " class="img-responsive" />
-										</div>
-									</div>
-									<div class="clearfix"></div>
-								</div>
-							</ul>
+						<li>
+							<a href="products.html">Products</a>
 						</li>
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="mail.html">Mail Us</a></li>
@@ -1127,7 +1093,7 @@
 					<div class="w3_hs_bottom">
 						<ul>
 							<li>
-								<a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
+								<a href="single.html?id={{$value.get('product').id}}"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a>
 							</li>
 						</ul>
 					</div>
