添加商品列表页功能 以及搜索功能

--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -55,8 +55,8 @@
 					<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 				</label>
 				<div class="search_form">
-					<form action="#" method="post">
-						<input type="text" name="Search" placeholder="Search...">
+					<form action="products.html" method="get">
+						<input type="text" name="search" placeholder="Search...">
 						<input type="submit" value="Send">
 					</form>
 				</div>
